# simmgr

./: .gitignore  LICENSE  README.md  global_config.yaml  pyproject.toml
demos/: popstat_demo_simulator.py
demos/popstat_demo_project/: project_config.yaml  simulation_spec.yaml
docs/: SimMgr_dashboard_pseudospec.md  SimMgr_specification.md  dashboard_user_guide.md  user_manual.md
simmgr/: __init__.py  api.py  atomic_io.py  build_manifest.py  canonicalize.py  cli.py  collect_status.py  config.py  dashboard.py  dashboard_data.py  export_registry.py  ids.py  ingest_manifest.py  init_project.py  logging_utils.py  mini_yaml.py  plan_jobs.py  query_runs.py  registry.py  registry_schema.py  resources.py  run_group.py  run_one.py  runner.py  slurm.py  state.py  submit_jobs.py  suggest_pilot.py  time_utils.py  tsv.py
tests/: test_dashboard_app.py  test_dashboard_data.py  test_workflow.py
